# llm-wiki

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  rxconfig.py  time_embed.py
cli/: main.py
config/: settings.py
docs/: TDD.md
infrastructure/: db.py
scripts/: setup_db.py  verify.py
tests/: test_index_and_log.py  test_ingestion.py  test_lint.py  test_pages.py  test_project_management.py  test_query.py  test_storage.py
ui/: constants.py  empty_state.py  header.py  input.py  messages.py  session.py  state.py  ui.py
wiki/: embeddings.py  index.py  log.py  pages.py  project_config.py  prompts.py  schema.py  storage.py  utils.py
workflows/: ingestion.py  lint.py  query.py  utils.py
