[project]
name = "llm-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.5",
    "oracledb>=4.0.1",
    "pytest>=9.1.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "typer>=0.26.7",
]
