[project]
name = "llm-wiki"
version = "0.1.0"
description = "Personal knowledge base agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.112.0",
    "buildpost>=0.1.4",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.5",
    "oracledb>=4.0.1",
    "pytest>=9.1.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "typer>=0.26.7",
]

[project.scripts]
llm-wiki = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["wiki", "workflows", "cli", "config", "infrastructure"]
