[project]
name = "llm-wiki"
version = "0.1.0"
description = "Personal knowledge base agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.112.0",
    "buildpost>=0.1.4",
    "einops>=0.8.2",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "optimum[onnxruntime]>=2.1.0",
    "oracledb>=4.0.1",
    "pytest>=9.1.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.1",
    "transformers<5.0",
    "typer>=0.26.7",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
llm-wiki = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["wiki", "workflows", "cli", "config", "infrastructure"]
